--- a/package.yaml
+++ b/package.yaml
@@ -36,13 +36,14 @@ ghc-options:
 - -Widentities
 - -Wincomplete-record-updates
 - -Wincomplete-uni-patterns
-- -Wmissing-export-lists
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
 
 library:
   source-dirs: src
+  dependencies:
+    - text
 
 executables:
   string-processing-by-example:
