--- a/string-processing-by-example.cabal
+++ b/string-processing-by-example.cabal
@@ -42,6 +42,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , listsafe
     , text
   default-language: Haskell2010
 
