--- a/string-processing-by-example.cabal
+++ b/string-processing-by-example.cabal
@@ -36,6 +36,7 @@ library
       LambdaCase
       NamedFieldPuns
       NoMonomorphismRestriction
+      FlexibleContexts
       OverloadedStrings
       RecordWildCards
       TupleSections
@@ -43,6 +44,7 @@ library
   build-depends:
       base >=4.7 && <5
     , listsafe
+    , mtl
     , text
   default-language: Haskell2010
 
@@ -57,6 +59,7 @@ executable string-processing-by-example
       LambdaCase
       NamedFieldPuns
       NoMonomorphismRestriction
+      FlexibleContexts
       OverloadedStrings
       RecordWildCards
       TupleSections
@@ -78,6 +81,7 @@ test-suite string-processing-by-example-test
       LambdaCase
       NamedFieldPuns
       NoMonomorphismRestriction
+      FlexibleContexts
       OverloadedStrings
       RecordWildCards
       TupleSections
@@ -86,4 +90,5 @@ test-suite string-processing-by-example-test
       base >=4.7 && <5
     , hspec
     , string-processing-by-example
+    , text
   default-language: Haskell2010
