--- a/string-processing-by-example.cabal
+++ b/string-processing-by-example.cabal
@@ -40,6 +40,7 @@ library
       OverloadedStrings
       RecordWildCards
       TupleSections
+      ConstraintKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
@@ -63,6 +64,7 @@ executable string-processing-by-example
       OverloadedStrings
       RecordWildCards
       TupleSections
+      ConstraintKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
@@ -85,6 +87,7 @@ test-suite string-processing-by-example-test
       OverloadedStrings
       RecordWildCards
       TupleSections
+      ConstraintKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
