--- a/string-processing-by-example.cabal
+++ b/string-processing-by-example.cabal
@@ -44,6 +44,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
     , listsafe
     , mtl
     , text
