--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ default-extensions:
 - NamedFieldPuns
 - NoMonomorphismRestriction
 - FlexibleContexts
+- FlexibleInstances
 - OverloadedStrings
 - RecordWildCards
 - TupleSections
